Fix legend title alignment

--- a/src/styles/Legend.css
+++ b/src/styles/Legend.css
@@ -48,6 +48,7 @@
   display: flex;
   max-width: 200px;
   margin-bottom: -8px;
+  justify-content: center;
 }
 
 .legend-square {
